--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-aiofiles==0.5.0
-aiohttp==3.7.4
-asyncio==3.4.3
-fastai==2.7.4
-torch==1.7.1
-torchvision==0.8.2
-
+aiofiles
+aiohttp
+asyncio
+fastai
+torch
+torchvision
+numpy
+pillow
+python-multipart
+starlette
+uvicorn
